<resources>
    <string name="app_name">Green Fridge</string>
    <string name="list">My Shopping List</string>
    <string name="empty_fridge">Looks like the fridge is empty… Why don\'t you add something?</string>
    <string name="empty_shopping_list">Your shopping list is empty</string>
    <string name="notification_title">A reminder from Green Fridge:</string>
    <string name="many_expiring_products">You have %1$d expiring/expired products!</string>
    <string name="one_expiring_product">You have an expiring/expired product!</string>


    <string name="About_menu_title">ABOUT</string>
    <string name="expired_string">EXPIRED</string>
    <string name="today">TODAY</string>

    <!-- Strings used in the "About" page -->
    <string name="credit_fridge_icon">Icon made by RoundIcons from
        <a href="https://www.flaticon.com/">FLATICON</a></string>
    <string name="translation_credits">All translations provided by
        <a href="https://www.linkedin.com/in/stella-kotzampasaki/">Stella Kotzampasaki</a></string>
    <string name="product_data_credits">Data for food products available from
        <a href="https://world.openfoodfacts.org/data">Open Food Facts database</a></string>

    <!-- Strings used for the Alert Dialogs-->
    <string name="alert_dialog_title">Delete Product</string>
    <string name="alert_dialog_message">Just delete it or also add it in your shopping list?</string>
    <string name="delete_and_add_in_list">Delete &amp; add to list</string>
    <string name="delete_and_add_in_fridge">Delete &amp; add in fridge</string>
    <string name="delete">delete</string>
    <string name="open_fridge">open fridge</string>
    <string name="check_list">check my list</string>
    <string name="alert_dialog_list_message">Just delete it or also add it in the fridge?</string>
    <string name="cancel">cancel</string>
    <string name="fridge_icon_description">Logo icon of the app</string>
    <string name="add_product">Add product</string>
    <string name="inventory">Inventory</string>
    <string name="scan_product">Or scan the barcode of the product</string>
    <string name="add_to_fridge">Add to fridge</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="scan">Scan</string>
    <string name="product_name">Product name</string>
    <string name="add_to_list">Add to list</string>

    <!-- ad unit id used for the release REMEMBER TO CHANGE TO THIS ONE WHEN RELEASING -->
    <!-- <string name="ad_unit_id">ca-app-pub-6270104843193223/9649025660</string> -->

    <!-- ad unit id used for testing (debug) -->
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
