<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.georgeampartzidis.greenfridge.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/fridge_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:paddingTop="?android:attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fridge"
        android:contentDescription="@string/fridge_icon_description" />

    <TextView
        android:id="@+id/tv_icon_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/credit_fridge_icon"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="@+id/fridge_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fridge_icon" />

    <TextView
        android:id="@+id/tv_translation_credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/translation_credits"
        app:layout_constraintStart_toStartOf="@id/tv_icon_link"
        app:layout_constraintEnd_toEndOf="@id/tv_icon_link"
        app:layout_constraintTop_toBottomOf="@id/tv_icon_link"/>

    <TextView
        android:id="@+id/tv_product_data_credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/product_data_credits"
        app:layout_constraintStart_toStartOf="@id/tv_icon_link"
        app:layout_constraintEnd_toEndOf="@id/tv_icon_link"
        app:layout_constraintTop_toBottomOf="@id/tv_translation_credits"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>
