<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.georgeampartzidis.georgeampartzidis.greenfridge.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:titleTextColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/fridge"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:paddingTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fridge" />

    <TextView
        android:id="@+id/tv_fridge_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/empty_fridge"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridge" />

    <TextView
        android:id="@+id/tv_expiring_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fridge_content"
        tools:text="There are 2 products expiring today!" />

    <Button
        android:id="@+id/bt_open_fridge"
        style="@style/button"
        android:layout_marginStart="8dp"
        android:onClick="openFridge"
        android:text="@string/open_fridge"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_add_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_open_shopping_list"
        app:layout_constraintTop_toTopOf="@+id/bt_add_product" />

    <Button
        android:id="@+id/bt_open_shopping_list"
        style="@style/button"
        android:onClick="openShoppingList"
        android:text="@string/check_list"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/bt_add_product"
        app:layout_constraintStart_toEndOf="@id/bt_open_fridge"
        app:layout_constraintEnd_toStartOf="@id/bt_add_product"/>

    <Button
        android:id="@+id/bt_add_product"
        style="@style/button"
        android:onClick="addProductActivity"
        android:text="@string/add_product"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_open_shopping_list"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_add_white_24px" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>
