<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/cardview_light_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:title="@string/inventory"
            app:titleTextColor="@android:color/white" />

        <!-- The paddingTop equal to the toolbar/actionbar is used to make RecyclerView start below the
               actual toolbar -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="?attr/actionBarSize">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_empty_fridge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_fridge"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:background="@color/background"
            android:gravity="center"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:layout_gravity="center"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_add_product"
            style="@style/fab_button"
            android:layout_height="56dp"
            android:layout_gravity="bottom|right"
            android:onClick="addProductActivity"
            app:backgroundTint="@color/colorButton"
            android:elevation="4dp"
            app:srcCompat="@drawable/ic_add_white_24px" />
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal='true'
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id"/>
</RelativeLayout>